# ChangeLog for app-portage/getdelta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*getdelta-0.7.8 (07 Apr 2010)

  26 Aug 2010; Martin Väth <martin@mvath.de>
  Use local name also for dtu file. Bump to force upgrade.

  30 Jun 2010; Martin Väth <martin@mvath.de>
  Fix typo in FETCHCOMMAND description

  29 Jun 2010; Martin Väth <martin@mvath.de>
  Bump to force upgrade.

  07 Apr 2010; Martin Väth <martin@mvath.de>
  Copy from the portage tree and add eapi2.patch; clear previous ChangeLog.