@@ -1,5 +1,5 @@
-AUX eapi2.patch 8041 RMD160 bbe8cda8cd1dd1ea5914a6f2cf23c65b39fa2e1c SHA1 dfd66df91a8bf1a01eca180c765af28fadf9a29c SHA256 f5e8048cf7308ff1c8b7547d4b43881ea8483a5de44f1ef340ba203225544ab5
+AUX eapi2.patch 9597 RMD160 8d9a088b362aaedabadca0a7181071e72575a5d9 SHA1 9b9e67ccd6aaf91cde072f1bee47f89cb613ee33 SHA256 96afaf4906be052eb8e7817f0634a01023c8f4a46235d99b896844a5ffa48b1c
 DIST getdelta-0.7.8.tar.bz2 10335 RMD160 fc06a4ceb1d56be76581d246ab1ea59c08f93d6f SHA1 5fca5b6a2bf1a396ae6b74afdf7145354802433d SHA256 72bd5dac59e86a5c78217a15e3198df513152dc784a8685b1a8c2c5efdb34217
-EBUILD getdelta-0.7.8-r2.ebuild 979 RMD160 b977a287e2381b321cbe7876ca549773b3d60730 SHA1 e3183dde630bd3702434a3260f18ec1890079fa3 SHA256 4f9d39214af5f5d90ba0916a12eebabd8ff97f372cc221ce660f29b6c273858b
-MISC ChangeLog 609 RMD160 2394b3faf80f3ef7670ccb6814d2bbbd16908ad9 SHA1 ebd9cbeed97280226ce03f0bf191b5b1f75195f0 SHA256 345520c476c63590b0bc20c96b1c3994f5bf83941622645493cb1fe8bdb8a986
+EBUILD getdelta-0.7.8-r3.ebuild 979 RMD160 b977a287e2381b321cbe7876ca549773b3d60730 SHA1 e3183dde630bd3702434a3260f18ec1890079fa3 SHA256 4f9d39214af5f5d90ba0916a12eebabd8ff97f372cc221ce660f29b6c273858b
+MISC ChangeLog 719 RMD160 15421b28ada5a2fd86911d25511014d5681077aa SHA1 9f2b922a722a0168d74e0a8ad3fbc7344f6c48e4 SHA256 b6f80e36a3aec9402304f221fe1963b8129e47f21930bf741fc103be51c9cf17
 MISC metadata.xml 388 RMD160 72d22ddce38d3b7c38380c9b0edae16c99974b76 SHA1 2f0107c483ea6272a3fe84b65de8fa46da8dd4c8 SHA256 497a451192be11a8a64d194e594daf90f7b2c59427654c78ed4c614cb442481f
