@@ -1,16 +1,31 @@
 --- getdelta.sh
 +++ getdelta.sh
-@@ -25,6 +25,9 @@
+@@ -25,6 +25,11 @@
  VERSION="0.7"
  
  # Changelog
++# version 0.7.10  2010/08/27
++#		- Use alternative to "deltup-queued" file
 +# version 0.7.9   2008/10/08
 +#		- add second parameter for destination name (EAPI=2)
 +#		- quote more carefully
  # version 0.7.8   2007/07/13
  #		- added option -O to call of emerge when finding mirrors
  #		- replaced some calls of coreutils with bash-internals
-@@ -326,13 +329,13 @@
+@@ -292,6 +297,12 @@
+ 	echo $vser
+ }
+ 
++GotFile() {
++	test -s "${1}" && {
++		[ "$(head -c5 -- "${1}")" = "sorry" ] || \
++		[ "$(file -bi -- "${1}" | cut -d"/" -f1)" = "application" ]
++	}
++}
+ 
+ # some colors for colored output
+ output() {
+@@ -326,13 +337,13 @@
  
  remove() {
  	output "${GREEN}You have chosen to remove ${CYAN}$1\n"
@@ -26,7 +41,7 @@
  	popd >/dev/null 2>&1
  }
  
-@@ -349,7 +352,7 @@
+@@ -349,7 +360,7 @@
  			-e "s/src4/srcDDD/g" \
  			-e "s/src5/srcEEE/g" \
  			-e "s/src6/srcFFF/g" \
@@ -35,7 +50,7 @@
  	fi
  	
  	# ignore PR for src-files of firefox
-@@ -375,7 +378,7 @@
+@@ -375,7 +386,7 @@
  		   -e "s/rc//g" \
  		   -e "s/[\._-]//g" \
  		   -e "s/\+//g" \
@@ -44,15 +59,15 @@
  }
  
  # create or update a config-file
-@@ -384,6 +387,7 @@
+@@ -384,6 +395,7 @@
  add_to_configfile LOCAL_MIRROR "" "set this to one or more (space separated) URI ending with '/' if you want to check one or more local mirror(s) first\n# most people just leave it empty."
  add_to_configfile DELTUP_SERVER "http://linux01.gwdg.de/~nlissne/deltup.php" "deltup-server to use"
  add_to_configfile FETCH "/usr/bin/wget -t 1 --passive-ftp" "command to use for downloading"
-+add_to_configfile FETCHNAME "$FETCH -O" "command to use for downloading; first parameter is the filename, second the url"
++add_to_configfile FETCHNAME "\$FETCH -O" "command to use for downloading; first parameter is the filename, second the url"
  add_to_configfile QUEUERETRY 15 "number of seconds to wait before a queued request is retried"
  add_to_configfile MAXIMUM_ACCEPTABLE_QUEUEPOS "15" "the maximum queuepos you would accept (if higher download full archive instead)"
  add_to_configfile QUEUETIMEOUT 900 "when a dtu-request is queued - how long should we wait max. before downloading the original archive instead (in seconds)"
-@@ -424,14 +428,14 @@
+@@ -424,14 +436,14 @@
  add_to_donotremove "^rp-pppoe"
  
  
@@ -69,7 +84,7 @@
  	echo -e "\n${YELLOW}There is a config-file ${CYAN}${GETDELTA_CONFIGFILE}${YELLOW} with some variables to control the behaviour of this script."
  	echo -e "Edit it to your needs.${NORMAL}"
  	exit 1
-@@ -464,9 +468,10 @@
+@@ -464,9 +476,10 @@
  	output "use getdelta.sh for your FETCHCOMMAND, only." &&
  	sleep 5 && exit 1
  
@@ -82,7 +97,7 @@
  
  # repoman downloads metadata.dtd with FETCHCOMMAND
  # this should not be done with getdelta - so just fetch the file and exit
-@@ -475,7 +480,7 @@
+@@ -475,7 +488,7 @@
  # dtu files.
  if [ "${NEW_FILE}" = "metadata.dtd" ] || [ "$GETDELTA" = "0" ]
  then
@@ -91,7 +106,7 @@
  	exit $?
  fi
  
-@@ -516,7 +521,7 @@
+@@ -516,7 +529,7 @@
  #
  output "${GREEN}Searching for a previously downloaded file in ${YELLOW}${DISTDIR}\n"
  
@@ -100,7 +115,7 @@
  length_first_chars=${#first_chars}
  [ $length_first_chars -lt 3 ] && first_chars="${NEW_FILE:0:2}"
  
-@@ -527,7 +532,7 @@
+@@ -527,7 +540,7 @@
  let len1=${#mask}
  filelist=""
  
@@ -109,7 +124,7 @@
  do
  	mask2=$(mask_name "${name}")
  	# add any file, that results in the same mask or differ not more than two letters
-@@ -582,7 +587,7 @@
+@@ -582,7 +595,7 @@
  
  	# find matching part of filename - first: frontmatch
  	x=0;
@@ -118,7 +133,7 @@
  	match=""
  	while [ -z "$match" ]
  	do
-@@ -657,7 +662,7 @@
+@@ -657,7 +670,7 @@
  	FILE_IS_CORRUPT=false
  	if $CHECK_OLD_FILE 
  	then
@@ -127,7 +142,7 @@
  		if [ "$file_digest" ]
  		then
  			file_md5=$(cut -d ' ' -f2 <<< "$file_digest") 
-@@ -669,7 +674,7 @@
+@@ -669,7 +682,7 @@
  				FILE_IS_CORRUPT=true
  			fi
  		else
@@ -136,7 +151,7 @@
  			then
  				output "${YELLOW}Could not find a digest-file for ${CYAN}${best_candidate}${YELLOW}. Testing file integrity with tar.\n"
  				if ! tar -tf ${best_candidate} >/dev/null
-@@ -698,17 +703,17 @@
+@@ -698,17 +711,17 @@
  
  		# Remember where we are, and go to a new dir there we can work
  		tmp_dwn_dest="${DISTDIR}/.getdelta-`date +%N`-tmp"
@@ -158,17 +173,46 @@
  		then
  			# thanks to deelkar for this much more elegant solution to the "broken pipe" problem with "head -n1"
  			GOTFILE=$(ls -c | sed -n 1p) 
-@@ -761,20 +766,20 @@
+@@ -718,14 +731,14 @@
+ 			# may have sento to us.
+ 			
+ 			# first: the request have been queued
+-			if [ "${GOTFILE}" = "deltup-queued" ]
++			if [ "${GOTFILE}" = "deltup-queued" ] || ! GotFile "${GOTFILE}"
+ 			then 
+ 				let QTMOUT=$(date +%s)+QUEUETIMEOUT
+-				while [ -f deltup-queued ]
++				while [ -f deltup-queued ] || ! GotFile "${GOTFILE}"
+ 				do
+ 					output "${GREEN}destination file: ${CYAN}${NEW_FILE}\n"
+-					output "${YELLOW}$(cat deltup-queued)"
+-					QUEUEPOS=$(grep "has been queued" deltup-queued | cut -d. -f2 | cut -d")" -f1)
++					output "${YELLOW}$(cat -- "${GOTFILE}")"
++					QUEUEPOS=$(grep "has been queued" -- "${GOTFILE}" | cut -d. -f2 | cut -d")" -f1)
+ 					rm -f deltup-queued
+ 					TSTAMP=$(date +%s)
+ 					if ((TSTAMP<QTMOUT)) && ((QUEUEPOS<=MAXIMUM_ACCEPTABLE_QUEUEPOS))
+@@ -741,7 +754,7 @@
+ 							sleep 1
+ 						done
+ 						echo -n -e "${NORMAL}"
+-						$FETCH "${DELTUP_SERVER}${query}"
++						$FETCHNAME "${best_candidate}-${NEW_FILE}.dtu" "${DELTUP_SERVER}${query}"
+ 						GOTFILE=$(ls -c | sed -n 1p)
+ 					else
+ 						if ((TSTAMP>=QTMOUT))
+@@ -761,20 +774,20 @@
  				done
  			fi
  			
 -			if [ -f ${best_candidate}-${NEW_FILE}.failed ]
-+			if [ -f "${best_candidate}-${NEW_FILE}.failed" ]
++			if [ -f "${best_candidate}-${NEW_FILE}.failed" ] || [ "$(head -c5 -- "${GOTFILE}")" = "sorry" ]
  			then
  				output "\n${RED}The server could not build the dtu-file for ${NEW_FILE}\n" 
- 				output "${YELLOW}reason:\n${RED}$(cat ${best_candidate}-${NEW_FILE}.failed)\n" 
+-				output "${YELLOW}reason:\n${RED}$(cat ${best_candidate}-${NEW_FILE}.failed)\n" 
 -				rm -rf ${best_candidate}-${NEW_FILE}.failed
-+				rm -rf -- "${best_candidate}-${NEW_FILE}.failed"
++				output "${YELLOW}reason:\n${RED}$(cat "${best_candidate}-${NEW_FILE}.failed" "${GOTFILE}")\n"
++				rm -rf -- "${best_candidate}-${NEW_FILE}.failed" "${GOTFILE}"
  			fi
  
 -			if [ -f ${best_candidate}-${NEW_FILE}.dtu ]
@@ -185,7 +229,7 @@
  					let savedsize=${newsize}-${downloadsize}
  					let percent=${savedsize}*100/${newsize}
  					unit="bytes"
-@@ -791,8 +796,8 @@
+@@ -791,8 +804,8 @@
  					esac
  					output "${YELLOW}This dtu-file saved ${UCOLOR}${savedsize} ${unit} (${percent}%)${YELLOW} download size.\n"
  				fi
@@ -196,7 +240,7 @@
  			fi
  
  		fi # if $FETCH "${DELTUP_SERVER}${query}"
-@@ -812,7 +817,7 @@
+@@ -812,7 +825,7 @@
  			read
  		fi
  		popd >/dev/null 2>&1
@@ -205,7 +249,7 @@
  		#stop respond to trap2
  		trap 2
  	fi # if ! FILE_IS_CORRUPT
-@@ -824,10 +829,10 @@
+@@ -824,10 +837,10 @@
  	
  # Ok, once we are here, we should have got the delta (and used it)
  # or we still have to download the full file
